--- a/.gitignore
+++ b/.gitignore
@@ -1,1 +1,17 @@
-node_modules
+# Dependency directories
+node_modules/
+
+# Logs
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
+
+# OS files
+.DS_Store
+Thumbs.db
+
+# VS Code settings
+.vscode/
+
+# Environment files (if you ever add them)
+.env
